--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -20,7 +20,7 @@
   					<input ng-model="password" type="password" class="form-control" aria-label="Password" aria-describedby="sizing-addon1"/>
 				</div>
 					<br/>	
-				<button type="button" class="btn btn-success border-dark" ng-click="submit()"><i class="fa fa-check fa-1x " style="color:white" aria-hidden="true"></i> Submit</button>     <button type="button" class="btn btn-light border-dark" ng-click="clear()"><i class="fa fa-close fa-1x " style="color:black" aria-hidden="true"></i> Clear</button>
+				<button type="button" class="btn btn-success border-dark" ng-click="submit()"><i class="fa fa-check fa-1x" style="color:white" aria-hidden="true"></i> Submit</button>     <button type="button" class="btn btn-blue-grey" ng-click="clear()"><i class="fa fa-close fa-1x " style="color:black" aria-hidden="true"></i> Clear</button>
 				<br/><br/>
 				<a href="#">Forgot password</a>
 				<br/><br/>
