--- a/src/main/resources/templates/registration/worker-registration.html
+++ b/src/main/resources/templates/registration/worker-registration.html
@@ -42,7 +42,7 @@
   					<div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%"><strong>Please wait...</strong></div>
 				</div>
 				<br/>	
-				<button ng-click="submit()" type="button" class="btn btn-success border-dark"><i class="fa fa-check fa-1x " style="color:white" aria-hidden="true"></i> Submit</button>     <button  ng-click="clear()" type="button" class="btn btn-light border-dark"><i class="fa fa-close fa-1x " style="color:black" aria-hidden="true"></i> Clear</button>								
+				<button ng-click="submit()" type="button" class="btn btn-success border-dark"><i class="fa fa-check fa-1x " style="color:white" aria-hidden="true"></i> Submit</button>     <button  ng-click="clear()" type="button" class="btn blue-grey"><i class="fa fa-close fa-1x " style="color:black" aria-hidden="true"></i> Clear</button>								
 				</form>
 			</div>
 		</div>
